# OBSPipeline

./: .gitignore  sbatch_template.sh  solve.py
Alicpp/: FocalPlane.py
beamsys/: de_conti_150G.txt  de_conti_95G.txt  de_orient_150G.txt  de_orient_95G.txt  dg_150G.txt  dg_95G.txt  dsigma_150G.txt  dsigma_95G.txt  dx_150G.txt  dx_95G.txt  dy_150G.txt  dy_95G.txt
cpp2/: CMakeLists.txt
cpp2/src/: Driver.cxx  Driver.hpp  Fitter.cxx  Fitter.hpp  MapMaker.cxx  MapMaker.hpp  Misc.hpp  PyDriver.cxx  addleakage_bypass_impl.cxx  addleakage_impl.cxx  main.cxx  reckon_impl.cxx  sampling_impl.cxx
deproj/: OBS_beamsys.py  sbatch_cmb.sh
fp/: chi.npy  fp_chi.npy  fp_r.npy  fp_theta.npy  r.npy  theta.npy
utils/: add  genLensedMap  genTemplate  realization  rot  smoothing
